--- a/one_file.html
+++ b/one_file.html
@@ -243,7 +243,8 @@
     
     <script>
         const conf = {
-            "start_collapsed": false
+            "menu_starts_expanded": true,
+            "menu_options_starts_expanded": true  /* not implemented */
         };
 
         const links = { 
