--- a/one_file.html
+++ b/one_file.html
@@ -79,7 +79,7 @@
                     { text: "Item 2", link: "/dashboard/settings/item2", icon: "sliders" }, 
                     { text: "Item 3", link: "/dashboard/settings/item3", icon: "sliders" }
                   ],
-                  icon: "settings"
+                  icon: "sliders"
                 },
                 { text: "Integration Layer",  
                   childs: [ 
