--- a/one_file.html
+++ b/one_file.html
@@ -56,7 +56,7 @@
 
         const menu_items = { 
             admin:  [
-                { text: "Exam list", link: "/dashboard/exam-list", icon: "heart", /* "separator": true */ },
+                { text: "Exam list", link: "/dashboard/exam-list", icon: "heart", counter: 99, /* "separator": true */ },
                 { text: "Fast reporting", link: "/dashboard/fast-reporting", icon: "zap" },
                 { text: "Patients", link: "/dashboard/patients", icon: "users" },
                 { text: "Administration",
