--- a/one_file.html
+++ b/one_file.html
@@ -49,8 +49,8 @@
     
     <script>
         const menu_config = {
-            "menu_starts_expanded": true,
-            "menu_options_starts_expanded": true,  /* not implemented */
+            "starts_expanded": false,
+            "options_starts_expanded": true,  /* if it's true then starts_expanded will be true too */
             "role": "admin"
         };
 
