--- a/one_file.html
+++ b/one_file.html
@@ -16,6 +16,9 @@
 
     <!-- AsideMenu -->
     <script src="assets/js/asidemenu.js"></script>
+
+    <!-- Pulled from Backend, probably using Ajax -->
+    <script src="assets/js/menu_items.js"></script>
 </head>
 <body>
 
@@ -30,17 +33,18 @@
     </nav>
 
     <!-- Sidebar -->
-    <div id="sidebar" class="collapsed">
+    <div id="sidebar" class="collapsed">        
         <!-- El contenido será generado dinámicamente -->
     </div>
 
     <!-- Content -->
     <div id="content" class="p-4">
         <div class="container">
-            Lorem Ipsum
-            "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
-            "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
-            What is Lorem Ipsum?
+            <h2 class="mb-3">Lorem Ipsum</h2>
+            <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain...</p>           
+            <p>What is Lorem Ipsum?</p>
+            </pre>            
         </div>
     </div>
 
@@ -50,61 +54,10 @@
     <script>
         const menu_config = {
             "starts_expanded": false,
-            "options_starts_expanded": true,  /* if it's true then starts_expanded will be true too */
-            "role": "admin"
+            "options_starts_expanded": true,  /* it has only effect if starts_expanded is true */
+            "role": "admin",
+            "margin_top": "65px"
         };
-
-        const menu_items = { 
-            admin:  [
-                { text: "Exam list", link: "/dashboard/exam-list", icon: "heart", counter: 99, /* "separator": true */ },
-                { text: "Fast reporting", link: "/dashboard/fast-reporting", icon: "zap" },
-                { text: "Patients", link: "/dashboard/patients", icon: "users" },
-                { text: "Administration",
-                  childs: [ 
-                    { text: "Roles", 
-                      childs: [
-                        { text: "Users", link: "/dashboard/administration/roles/users", icon: "user" }
-                      ],
-                      icon: "shield"
-                    },
-                    { text: "Sites", link: "/dashboard/administration/sites", icon: "map-pin" },
-                    { text: "Groups", link: "/dashboard/administration/groups", icon: "layers" },
-                    { text: "Devices", link: "/dashboard/administration/devices", icon: "cpu" }
-                  ],
-                  icon: "settings"
-                },
-                { text: "Settings",  
-                  childs: [ 
-                    { text: "Item 1", link: "/dashboard/settings/item1", icon: "sliders" }, 
-                    { text: "Item 2", link: "/dashboard/settings/item2", icon: "sliders" }, 
-                    { text: "Item 3", link: "/dashboard/settings/item3", icon: "sliders" }
-                  ],
-                  icon: "sliders"
-                },
-                { text: "Integration Layer",  
-                  childs: [ 
-                    { text: "Item 1", link: "/dashboard/integration-layer/item1", icon: "layers" }
-                  ],
-                  icon: "layers"
-                },
-                { text: "System",  
-                  childs: [ 
-                    { text: "Item 1", link: "/dashboard/system/item1", icon: "server" }, 
-                    { text: "Item 2", link: "/dashboard/system/item2", icon: "server" }
-                  ],
-                  icon: "cpu"
-                },
-                { text: "Info", link: "javascript:alert('System is operational')", icon: "info" }
-            ],
-
-            // Other user-role's objects for rendering. E.g.
-            manager: [
-                { text: "Exam list", link: "/dashboard/exam-list", icon: "heart", /* "separator": true */ },
-                { text: "Fast reporting", link: "/dashboard/fast-reporting", icon: "zap" },
-                { text: "Info", link: "javascript:alert('System is operational')", icon: "info" }
-            ]
-        };       
-       
 
         /*
             AsideMenu init
