--- a/one_file.html
+++ b/one_file.html
@@ -55,8 +55,7 @@
         const menu_config = {
             "starts_expanded": false,
             "options_starts_expanded": true,  /* it has only effect if starts_expanded is true */
-            "role": "admin",
-            "margin_top": "80px"
+            "role": "admin"
         };
 
         /*
