--- a/index.html
+++ b/index.html
@@ -21,18 +21,12 @@
     <script src="assets/js/menu_items.js"></script>
 
     <style>
+        /*
+            Possible CSS adjustments
+        */
         #sidebar .counter {
             background-color: #A52A2A;
             color: white;
-            border-radius: 50%;
-            padding: 2px 6px;
-            font-size: 12px;
-            position: absolute;
-            right: 10px;
-        }
-        
-        #sidebar.expanded .counter {
-            right: 10px;
         }
     </style>
 </head>
@@ -86,6 +80,7 @@
         document.addEventListener('DOMContentLoaded', () => {            
             feather.replace();
         });
+        
     </script>
 </body>
 </html>
