--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
     <script src="assets/third_party/bootstrap-5.3/bootstrap.bundle.min.js"></script>
     
     <script>
+        // custom callback (revisar si esta bien)
+        function my_callback(obj) {
+            console.log(obj);
+            alert('here');
+        }
+
         const menu_config = {
             "starts_expanded": false,
             "options_starts_expanded": false,  /* it has only effect if starts_expanded is true */
