--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <script src="assets/third_party/bootstrap-5.3/bootstrap.bundle.min.js"></script>
     
     <script>
-        // custom callback (revisar si esta bien)
+        // custom callback
         function my_callback(obj) {
             console.log(obj);
             alert('here');
