--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Possible CSS adjustments
         */
         #sidebar .counter {
-            background-color: #A52A2A;
+            background-color: red; 
             color: white;
         }
     </style>
