--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
         /*
             Possible CSS adjustments
         */
+
+        #content {
+            transition: margin-left 0.3s;
+            padding-top: 80px !important;
+            background-color: #E9F0F1; 
+            color: #333333;
+            min-height: 100vh;
+        }
+
         #sidebar .counter {
             background-color: red; 
             color: white;
@@ -51,10 +60,7 @@
     <div id="content" class="p-4">
         <div class="container">
             <h2 class="mb-3">Lorem Ipsum</h2>
-            <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
-            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain...</p>           
-            <p>What is Lorem Ipsum?</p>
-            </pre>            
+            <p>Neque porro quisquam est ...</p>
         </div>
     </div>
 
