--- a/index.html
+++ b/index.html
@@ -39,15 +39,13 @@
         }
     </style>
 </head>
-<body>
-    
+<body>    
     <!-- Navbar with hamburger icon -->
-    <nav class="navbar navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-dark bg-primary fixed-top">
         <div class="container-fluid">
             <button id="sidebarCollapse" class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon custom-toggler"></span>
             </button>
-            <a class="navbar-brand me-auto" href="#">My App</a>
         </div>
     </nav>
 
