--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <script>
         // custom callback
         function my_callback(obj) {
-            console.log(obj);
+            // console.log(obj);
             alert('here');
         }
 
