--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
     
     <script>
         // custom callback
-        function my_callback(obj) {
-            // console.log(obj);
-            alert('here');
+        function logout() {
+            alert('Performing log-out');
         }
 
         const menu_config = {
