--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
     </style>
 </head>
 <body>    
-    <!-- Navbar with hamburger icon -->
-    <nav class="navbar navbar-dark bg-primary fixed-top">
+
+    <!-- Navbar demo -->
+    <nav class="navbar bg-body-tertiary fixed-top">
         <div class="container-fluid">
-            <button id="sidebarCollapse" class="navbar-toggler" type="button">
-                <span class="navbar-toggler-icon custom-toggler"></span>
-            </button>
+          <a class="navbar-brand"></a>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         </div>
-    </nav>
+      </nav>
 
     <!-- Sidebar (Aside Menu) -->
     <div id="sidebar" class="collapsed">        
