--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
             min-height: 100vh;
         }
 
-        #sidebar .counter {
+        #asidemenu .counter {
             background-color: red; 
             color: white;
         }
