--- a/feather_test.html
+++ b/feather_test.html
@@ -4,7 +4,7 @@
   <script src="assets/third_party/feathericons/feather.min.js"></script>
 
   <style>
-    #sidebar .v-icon {
+    #asidemenu .v-icon {
         color: #cfa18b;
         margin-right: 10px;
     }
