--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- AsideMenu -->
     <link href="assets/css/asidemenu.css" rel="stylesheet">
 
+    <!-- Profile card -->
+    <link href="assets/css/profile.css" rel="stylesheet">
+
     <!-- Feather -->
     <script src="assets/third_party/feathericons/feather.min.js"></script>
 
