--- a/test.html
+++ b/test.html
@@ -8,66 +8,37 @@
     <!-- Bootstrap CSS -->
     <link href="assets/third_party/bootstrap-5.3/bootstrap.min.css" rel="stylesheet">
 
-    <style>
-        /*
-            Possible CSS adjustments
-        */
+    <!-- Profile card -->
+    <link href="assets/css/profile.css" rel="stylesheet">
 
-        #content {
-            transition: margin-left 0.3s;
-            padding-top: 80px !important;
-            background-color: #E9F0F1; 
-            color: #333333;
-            min-height: 100vh;
-        }
+    <!-- Feather -->
+    <script src="assets/third_party/feathericons/feather.min.js"></script>
 
-        #asidemenu .counter {
-            background-color: red; 
-            color: white;
-        }
-    </style>
+
 </head>
 <body>    
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+
+  <!-- Profile card -->
+  <div class="profile">
+    <div class="image-container">
+      <img src="assets/img/avatar.png" alt="Profile picture" class="profile-image">
+      <span class="edit-icon">
+        <i data-feather="edit-2"></i>
+      </span>
     </div>
-  </nav>
+    <span class="name">Annalisa Buonvicino</span>
+  </div>
   
 
     <!-- Bootstrap JS -->
     <script src="assets/third_party/bootstrap-5.3/bootstrap.bundle.min.js"></script>
+
+    <script>
+      // Feather icons
+      document.addEventListener('DOMContentLoaded', () => {            
+        feather.replace();
+    });
+    </script>
     
 </body>
 </html>
