--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
         }
 
         .logo {
+            margin-top: -130px;
             width: 60px;
             margin-left: 13px;
+        }
+
+        .logo-wide {
+            margin-top: -120px;
+            width: 150px;
         }
     </style>
 </head>
@@ -70,8 +76,7 @@
     </nav>
 
     <!-- Sidebar (Aside Menu) -->
-    <aside id="sidebar">      
-        <img class="logo" src="assets/img/logo-thin.png"/>   
+    <aside id="sidebar">
         <div id="asidemenu" class="collapsed">        
             <!-- Content to be generated dynamically -->
         </div>    
