--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Profile card -->
     <link href="assets/css/profile.css" rel="stylesheet">
 
+    <!-- Theme -->
+    <!-- link href="assets/css/custom_theme.css" rel="stylesheet" -->
+
     <!-- Feather -->
     <script src="assets/third_party/feathericons/feather.min.js"></script>
 
