--- a/index.html
+++ b/index.html
@@ -50,32 +50,26 @@
         }
 
         #asidemenu .counter {
-            background-color: red; 
             color: white;
         }
 
         .logo {
-            margin-top: -130px;
-            width: 60px;
-            margin-left: 13px;
+            position: absolute;
+            top: 8px;
+            left: 30px;
+            font-size: 30px;
+            font-weight: 600;
+            color: orangered;
         }
 
         .logo-wide {
-            margin-top: -120px;
-            width: 150px;
+            left: 110px;
         }
     </style>
 </head>
 <body>
     <!-- Navbar demo -->
     <nav class="navbar navbar-dark bg-primary fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand"></a>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
     </nav>
 
     <!-- Sidebar (Aside Menu) -->
