--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
 
         #sidebar {            
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             z-index: 6000;
